# daytona-xbla-recomp

./: .gitignore  .gitmodules  README.md
config/: daytona_manifest.toml  daytona_rexglue.toml
docs/: CODEGEN_PATCHES.md
patches/: daytona_working_codegen.patch
ppc/: ppc_config.h  ppc_detail.h
project/: CMakeLists.txt  CMakePresets.json
project/src/: daytona_debug.cpp  daytona_debug.h  daytona_symbols.h  keyboard_driver.cpp  main.cpp  stubs.cpp
